--- a/src/components/close-button/close-button.module.css
+++ b/src/components/close-button/close-button.module.css
@@ -2,10 +2,11 @@
 
 .closeBtn {
   @apply
-    absolute top-4 right-4 h-11 w-11
+    fixed top-4 right-4 h-10 w-10
     cursor-pointer    
 
     text-2xl text-center font-bold
+    align-baseline
     text-purple-600
     hover:text-cyan-400
     active:text-cyan-600
