--- a/src/components/close-button/close-button.module.css
+++ b/src/components/close-button/close-button.module.css
@@ -5,7 +5,7 @@
     fixed top-4 right-4 h-10 w-10
     cursor-pointer    
 
-    text-2xl text-center font-bold
+    text-2xl text-center
     align-baseline
     text-purple-600
     hover:text-cyan-400
