refactor: update button text for clarity and remove redundant elements in AuthLoginView

--- a/src/components/close-button/close-button.module.css
+++ b/src/components/close-button/close-button.module.css
@@ -15,7 +15,7 @@
     hover:bg-purple-600
     active:bg-purple-700
 
-    border-2
+    border-2 rounded-xs
     border-purple-700
     hover:border-transparent
     active:border-cyan-600;
