--- a/src/components/link-button/link-button.module.css
+++ b/src/components/link-button/link-button.module.css
@@ -15,7 +15,7 @@
   hover:text-cyan-400
   active:text-cyan-400
 
-    border-2 rounded-4xl
+    border-2 rounded-xs
   border-cyan-600
     hover:border-transparent
   active:border-cyan-600;
