--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,13 @@ html {
 @font-face {
   font-family: 'Office Code Pro D';
   src: url('/assets/fonts/OfficeCodeProD-Light.woff2') format('woff2');
-  font-weight: lighter;
+  font-weight: 300;
   font-style: normal;
 }
 @font-face {
   font-family: 'Office Code Pro D';
   src: url('/assets/fonts/OfficeCodeProD-LightItalic.woff2') format('woff2');
-  font-weight: lighter;
+  font-weight: 300;
   font-style: italic;
 }
 @font-face {
