--- a/src/common/button/button.module.css
+++ b/src/common/button/button.module.css
@@ -1,20 +1,26 @@
-@reference 'tailwindcss';
+.container {
+  background-color: var(--border-color);
+
+  &:hover {
+    background-color: var(--border-hover-color);
+  }
+
+  &:active {
+    background-color: var(--border-active-color);
+  }
+}
 
 .button {
-  @apply
-    cursor-pointer
-    text-center
-    align-baseline
-    text-purple-600
-    hover:text-cyan-400
-    active:text-cyan-600
+  background-color: var(--bg-color);
+  color: var(--text-color);
 
-    bg-transparent
-    hover:bg-purple-600
-    active:bg-purple-700
+  &:hover {
+    background-color: var(--bg-hover-color);
+    color: var(--text-hover-color);
+  }
 
-    border-2 rounded-xs
-    border-purple-700
-    hover:border-transparent
-    active:border-cyan-600;
+  &:active {
+    background-color: var(--bg-active-color);
+    color: var(--text-active-color);
+  }
 }
